# helloextendr

./: .Rbuildignore  DESCRIPTION  NAMESPACE  README.md
.github/workflows/: R-CMD-check.yaml
R/: extendr-wrappers.R  hello.R  helloextendr.R
man/: hello.Rd
src/: Makevars  Makevars.win  entrypoint.c
src/rust/: Cargo.toml
src/rust/src/: lib.rs
