[package]
name = "helloextendr"
version = "0.1.0"
authors = ["andy-thomason <andy@andythomason.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
extendr-api = "0.1.11"

[patch.crates-io]
extendr-api = { git = "https://github.com/extendr/extendr", branch = "extendr-engine" }
extendr-engine = { git = "https://github.com/extendr/extendr", branch = "extendr-engine" }
extendr-macros = { git = "https://github.com/extendr/extendr", branch = "extendr-engine" }
libR-sys = { git = "https://github.com/clauswilke/libR-sys", branch = "R_home" }
