[package]
name = "helloextendr"
version = "0.1.0"
authors = ["andy-thomason <andy@andythomason.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
extendr-api = "0.1.11"

# Once extendr 0.1.11 is on crates.io the entire remaining part
# of this file can be deleted.
[patch.crates-io]
extendr-api = { git = "https://github.com/clauswilke/extendr", branch = "issue75-module-registration" }
extendr-engine = { git = "https://github.com/clauswilke/extendr", branch = "issue75-module-registration"  }
extendr-macros = { git = "https://github.com/clauswilke/extendr", branch = "issue75-module-registration"  }
libR-sys = { git = "https://github.com/clauswilke/libR-sys", branch = "precomputed_bindings" }
